# gitignore

./: .gitignore  CHANGELOG.md  LICENSE  README.md  gitignore.cabal
.github/workflows/: haskell.yml
app/: CliApp.hs  CliOptions.hs  Main.hs
src/: CliApp.hs  Gitignore.hs
src/Gitignore/: Internal.hs
test/: GitignoreSpec.hs
