cabal-version:      3.0

name:               gitignore
version:            0.1.0.0

synopsis:           Simple .gitignore manipulator

description:        This simple .gitignore manipulator aims at adding patterns
                    to .gitignore, remove them and list the file's content

license:            BSD-3-Clause

license-file:       LICENSE

author:             Francesco Serra

maintainer:         francescoserra@duck.com

copyright:          
  (c) Francesco Serra
category:           Development
build-type:         Simple

extra-doc-files:    CHANGELOG.md


common common-settings
  default-language: Haskell2010
  ghc-options:
    -Wall

library
    import: common-settings
    hs-source-dirs: src
    build-depends:
      base
      , directory
    exposed-modules:
        Gitignore

executable gitignore
    import:           common-settings
    main-is:          Main.hs
    other-modules: CliOptions
    build-depends:   
        base
        , optparse-applicative
        , process
        , gitignore
        , directory
    hs-source-dirs:   app
    ghc-options:
      -O