cabal-version:      3.0

name:               gitignore
version:            0.1.0.0

synopsis:           Simple .gitignore manipulator

description:        This simple .gitignore manipulator aims at enabling the user to add patterns
                    to .gitignore, remove them and list the file's content

category:           Development

license:            BSD-3-Clause

license-file:       LICENSE

author:             Francesco Serra

maintainer:         francescoserra@duck.com

copyright:          (c) Francesco Serra

build-type:         Simple

extra-doc-files:    CHANGELOG.md README.md

source-repository head
  type: git
  location: https://github.com/FrancescoSerra/gitignore

common common-settings
  default-language: Haskell2010
  ghc-options:
    -Wall

library
    import: common-settings
    hs-source-dirs: src
    build-depends:
      base >= 4.16.4.0 && < 5
      , directory <= 1.3.9.0
      , temporary <= 1.3
      , text <= 2.0.2
    exposed-modules:
        Gitignore
    other-modules:
        Gitignore.Internal

executable gitignore
    import:           common-settings
    main-is:          Main.hs
    other-modules: CliOptions
    build-depends:   
        base >= 4.16.4.0 && < 5
        , optparse-applicative <= 0.18.1.0
        , process <= 1.6.25.0
        , gitignore
        , directory <= 1.3.9.0
    hs-source-dirs:   app